fix: work as module

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -1,159 +1,77 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Zastępstwa</title>
-    <style>
-      table,
-      th,
-      td {
-        border: 1px solid black;
-      }
-      table {
-        border: 1px solid black;
-        margin-bottom: 30px;
-        width: 80%;
-        border-collapse: collapse;
-        table-layout: fixed;
-        margin-left: auto;
-        margin-right: auto;
-        overflow-wrap: break-word;
-        text-align: center;
-      }
-      th {
-        padding: 5px;
-        text-align: left;
-      }
-      h1,
-      h2 {
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Zastępstwa</h1>
-    <h2>Okres: 10.09.2024 (wt.) - 10.09.2024 (wt.)</h2>
-    <table>
-      <tr>
-        <th colspan="7">Dzień: 10.09.2024 (wt.)</th>
-      </tr>
-      <tr>
-        <th style="text-align: center">Lekcja</th>
-        <th style="text-align: center">Nauczyciel/wakat</th>
-        <th style="text-align: center">Oddział</th>
-        <th style="text-align: center">Przedmiot</th>
-        <th style="text-align: center">Sala</th>
-        <th style="text-align: center">Zastępca</th>
-        <th style="text-align: center">Uwagi</th>
-      </tr>
-      <tr>
-        <td>1, 08:00-08:45</td>
-        <td>Łyczakowska Dorota</td>
-        <td>4TI</td>
-        <td>Matematyka</td>
-        <td>17</td>
-        <td>Uczniowie przychodzą później</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>1, 08:00-08:45</td>
-        <td>Tutka Artur</td>
-        <td>1TS|2/2</td>
-        <td>Informatyka</td>
-        <td>WPT</td>
-        <td>Uczniowie przychodzą później</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>2, 08:50-09:35</td>
-        <td>Łyczakowska Dorota</td>
-        <td>4TI</td>
-        <td>Matematyka</td>
-        <td>17</td>
-        <td>Uczniowie zwolnieni do domu</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>2, 08:50-09:35</td>
-        <td>Tutka Artur</td>
-        <td>2TS|1/2</td>
-        <td>Język angielski</td>
-        <td>W11</td>
-        <td>Benesz Monika</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>3, 09:40-10:25</td>
-        <td>Łyczakowska Dorota</td>
-        <td>5Ti</td>
-        <td>Matematyka</td>
-        <td>17</td>
-        <td>Okienko dla uczniów</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>3, 09:40-10:25</td>
-        <td>Tutka Artur</td>
-        <td>2TS|2/2</td>
-        <td>Język niemiecki</td>
-        <td>WPT</td>
-        <td>Kulnianin Zofia</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>4, 10:40-11:25</td>
-        <td>Łyczakowska Dorota</td>
-        <td>5Ti</td>
-        <td>Matematyka</td>
-        <td>17</td>
-        <td>Przeniesiona</td>
-        <td>wos BJ 17</td>
-      </tr>
-      <tr>
-        <td>4, 10:40-11:25</td>
-        <td>Tutka Artur</td>
-        <td>2TA|1/2</td>
-        <td>Pracownia sterowania automatyki</td>
-        <td>W17</td>
-        <td>Gonciarz Mateusz</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>5, 11:30-12:15</td>
-        <td>Łyczakowska Dorota</td>
-        <td>3TG</td>
-        <td>Fizyka</td>
-        <td>17</td>
-        <td>Przeniesiona</td>
-        <td>godz.wych Fu 17</td>
-      </tr>
-      <tr>
-        <td>6, 12:20-13:05</td>
-        <td>Łyczakowska Dorota</td>
-        <td>4TP</td>
-        <td>Fizyka rozszerzona</td>
-        <td>17</td>
-        <td>Przeniesiona</td>
-        <td>religia Gl 17</td>
-      </tr>
-      <tr>
-        <td>12, 17:25-18:10</td>
-        <td>Olchowy Anna</td>
-        <td>3BS</td>
-        <td>Fizyka</td>
-        <td></td>
-        <td>Przeniesiona</td>
-        <td>religia Ka 3</td>
-      </tr>
-      <tr>
-        <td>13, 18:15-19:00</td>
-        <td>Olchowy Anna</td>
-        <td>2BK</td>
-        <td>Fizyka</td>
-        <td>17</td>
-        <td>Uczniowie zwolnieni do domu</td>
-        <td></td>
-      </tr>
-    </table>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			Zastępstwa
+		</title><style>
+			table, th, td { border: 1px solid black; }
+			table{ border: 1px solid black; margin-bottom: 30px; width:80%; border-collapse: collapse; table-layout:fixed; margin-left:auto; margin-right:auto; overflow-wrap: break-word; text-align: center;}
+			th { padding:5px; text-align: left; }
+			h1, h2 { text-align: center; }
+
+		</style>
+	</head><body>
+		<h1>
+			Zastępstwa
+		</h1><h2>
+			Okres: 16.09.2024 (pon.) - 16.09.2024 (pon.)
+		</h2><table>
+			<tr>
+				<th colspan="7">Dzień: 16.09.2024 (pon.)</th>
+			</tr><tr>
+				<th style="text-align: center">Lekcja</th><th style="text-align: center">Nauczyciel/wakat</th><th style="text-align: center">Oddział</th><th style="text-align: center">Przedmiot</th><th style="text-align: center">Sala</th><th style="text-align: center">Zastępca</th><th style="text-align: center">Uwagi</th>
+			</tr><tr>
+				<td>1, 08:00-08:45</td><td>Różańska Dorota</td><td>2TA|2/2</td><td>Wychowanie fizyczne</td><td>G3</td><td>Zastępstwo</td><td></td>
+			</tr><tr>
+				<td>2, 08:50-09:35</td><td>Różańska Dorota</td><td>2TA|2/2</td><td>Wychowanie fizyczne</td><td>G3</td><td>Zastępstwo</td><td></td>
+			</tr><tr>
+				<td>3, 09:40-10:25</td><td>Lach Katarzyna</td><td>3TE|2/2</td><td>Opieka nad uczniami</td><td>W18</td><td>Stokłosa Elżbieta</td><td></td>
+			</tr><tr>
+				<td>4, 10:40-11:25</td><td>Benesz Monika</td><td>1TS|1/2</td><td>Język angielski</td><td>W11</td><td>Zastępstwo</td><td></td>
+			</tr><tr>
+				<td>4, 10:40-11:25</td><td>Czerkas Magdalena</td><td>5Ti</td><td>Geografia</td><td>16</td><td>Przeniesiona</td><td>peryf.w.ai-2/2 Oż 16</td>
+			</tr><tr>
+				<td>4, 10:40-11:25</td><td>Lach Katarzyna</td><td>3TG|2/2</td><td>Język angielski</td><td>WPT</td><td>Przeniesiona</td><td>j.angielski-1/2 GA 36&#10;j.angielski-2/2 GA 36</td>
+			</tr><tr>
+				<td>4, 10:40-11:25</td><td>Tutka Artur</td><td>3TG|2/2</td><td>Język angielski</td><td>36</td><td>Górecki Adam</td><td></td>
+			</tr><tr>
+				<td>4, 10:40-11:25</td><td>Tutka Artur</td><td>3TG|1/2</td><td>Informatyka</td><td>36</td><td>Przeniesiona</td><td>j.angielski-1/2 GA 26&#10;informatyka-2/2 Tu 26</td>
+			</tr><tr>
+				<td>5, 11:30-12:15</td><td>Benesz Monika</td><td>1TS|2/2</td><td>Język angielski</td><td>W11</td><td>Zastępstwo</td><td></td>
+			</tr><tr>
+				<td>5, 11:30-12:15</td><td>Bereza Jadwiga</td><td>4TS</td><td>Wiedza o społeczeństwie</td><td>W15</td><td>Przeniesiona</td><td>eksp.poj.sam Żo W15</td>
+			</tr><tr>
+				<td>6, 12:20-13:05</td><td>Benesz Monika</td><td>1TI|t.gripolcy</td><td>Wychowanie fizyczne</td><td></td><td>Guziewicz Grzegorz</td><td></td>
+			</tr><tr>
+				<td>6, 12:20-13:05</td><td>Bereza Jadwiga</td><td>5Ti</td><td>Historia</td><td>W12</td><td>Uczniowie zwolnieni do domu</td><td></td>
+			</tr><tr>
+				<td>6, 12:20-13:05</td><td>Lach Katarzyna</td><td>3BS</td><td>Język obcy zawodowy w branży samochodowej</td><td></td><td>Uczniowie przychodzą później</td><td></td>
+			</tr><tr>
+				<td>6, 12:20-13:05</td><td>Różańska Dorota</td><td>1TS|2/2</td><td>Wychowanie fizyczne</td><td></td><td>Zastępstwo</td><td></td>
+			</tr><tr>
+				<td>7, 13:10-13:55</td><td>Benesz Monika</td><td>1BK|kiermech</td><td>Opieka nad uczniami</td><td>32</td><td>Włoch Joanna</td><td></td>
+			</tr><tr>
+				<td>7, 13:10-13:55</td><td>Bereza Jadwiga</td><td>3BS</td><td>Historia</td><td></td><td>Uczniowie przychodzą później</td><td></td>
+			</tr><tr>
+				<td>7, 13:10-13:55</td><td>Drabik Piotr</td><td>2TI|1/2</td><td>Sieciowe systemy operacyjne</td><td></td><td>Przeniesiona</td><td>proj.str.int-1/2 Wa 36</td>
+			</tr><tr>
+				<td>7, 13:10-13:55</td><td>Lach Katarzyna</td><td>2BK|elpojsam</td><td>Język angielski</td><td>16</td><td>Górecki Adam</td><td></td>
+			</tr><tr>
+				<td>7, 13:10-13:55</td><td>Tutka Artur</td><td>1BK|elpojsam</td><td>Opieka nad uczniami</td><td>32</td><td>Włoch Joanna</td><td></td>
+			</tr><tr>
+				<td>8, 14:00-14:45</td><td>Drabik Piotr</td><td>2TI|1/2</td><td>Sieciowe systemy operacyjne</td><td></td><td>Przeniesiona</td><td>proj.str.int-1/2 Wa 36</td>
+			</tr><tr>
+				<td>8, 14:00-14:45</td><td>Lach Katarzyna</td><td>3TT|t.automat</td><td>Język niemiecki</td><td>W1</td><td>Rydzik Monika</td><td></td>
+			</tr><tr>
+				<td>9, 14:50-15:35</td><td>Drabik Piotr</td><td>2TI|2/2</td><td>Sieciowe systemy operacyjne</td><td></td><td>Uczniowie zwolnieni do domu</td><td></td>
+			</tr><tr>
+				<td>9, 14:50-15:35</td><td>Lach Katarzyna</td><td>3TM</td><td>Język angielski</td><td>16</td><td>Uczniowie zwolnieni do domu</td><td></td>
+			</tr><tr>
+				<td>10, 15:40-16:25</td><td>Drabik Piotr</td><td>2TI|2/2</td><td>Sieciowe systemy operacyjne</td><td></td><td>Uczniowie zwolnieni do domu</td><td></td>
+			</tr><tr>
+				<td>12, 17:25-18:10</td><td>Drabik Piotr</td><td>3TI</td><td>Eksploatacja urządzeń sieciowych</td><td>35</td><td>Uczniowie zwolnieni do domu</td><td></td>
+			</tr>
+		</table>
+	</body>
 </html>
